# ultrawide-ambientlight

./: CMakeLists.txt  README.md  ambientlight.cpp  ambientlight.h  app.cpp  app.h  capture.cpp  capture.h  common.h  config.ini  present.cpp  present.h  resources.h  resources.rc  settings.cpp  settings.h  ui.cpp  ui.h
scripts/: setup.bat  sign_and_install.ps1
shaders/: blackbar.hlsl  blur.cpp  blur.h  blur.hlsl  copy.cpp  copy.h  copy.hlsl  detect.cpp  detect.h  detectCpu.h  fullscreenquad.cpp  fullscreenquad.h  luma.hlsl  mask.hlsl  vignette.cpp  vignette.h  vignette.hlsl
